--- a/portfolio.qmd
+++ b/portfolio.qmd
@@ -2,3 +2,10 @@
 
 Information about the final portfolio will be added here.
 
+- homework "review": one problem from each section?
+
+- reflective statement 
+
+- remote presentation on articles?
+
+- in-class assessment of articles student has read
